[gd_scene load_steps=2 format=2]

[ext_resource path="res://Autoload/HTTP_Request.gd" type="Script" id=1]

[node name="HTTP" type="Node2D"]
script = ExtResource( 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Server_Registration" type="HTTPRequest" parent="."]

[node name="Server_Ping" type="HTTPRequest" parent="."]

[node name="Ping" type="Timer" parent="."]
wait_time = 15.0
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="Server_Registration" to="." method="_on_Server_Registration_request_completed"]
[connection signal="request_completed" from="Server_Ping" to="." method="_on_Server_Ping_request_completed"]
[connection signal="timeout" from="Ping" to="." method="_on_Ping_timeout"]
